--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="svg" href="assets/img/favicon.svg">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/app.css">
   <title>Расписание</title>
@@ -10,35 +11,154 @@
 <body>
   <div class="container">
     <h1>Расписание</h1>
-    <div class="day">
-      <h2>Понедельник</h2>
-      <table class="day-table">
-        <tbody>
-          <tr>
-            <td class="lesson-time">11:55-13:30</td>
-            <td class="lesson">
-              <h3>Административное право</h3>
-              <p>доц. Дригола Э.В., <span class="semi-bold">лекция</span>, ауд. 407</p>
-            </td>
-          </tr>
-          <tr>
-            <td class="lesson-time">13:45-15:20</td>
-            <td class="lesson">
-              <h3>Уголовный процесс</h3>
-              <p>проф. Апостолова Н.Н., <span class="semi-bold">лекция</span>, ауд. 407</p>
-            </td>
-          </tr>
-          <tr>
-            <td class="lesson-time">15:50-17:25</td>
-            <td class="lesson">
-              <h3>Уголовный процесс</h3>
-              <p>доц. Малина М.А., <span class="semi-bold">семинар</span>, ауд. 221</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="schedule">
+      <div class="day">
+        <h2>Понедельник</h2>
+        <table class="day-table">
+          <tbody>
+            <tr>
+              <td class="lesson-time">11:55-13:30</td>
+              <td class="lesson">
+                <h3>Административное право</h3>
+                <p>доц. Дригола Э.В.</p>
+                <p><span class="semi-bold">лекция</span>, ауд. 407</p>
+              </td>
+            </tr>
+            <!-- <tr>
+              <td class="lesson-time">13:45-15:20</td>
+              <td class="lesson">
+                <h3>Уголовный процесс</h3>
+                <p>проф. Апостолова Н.Н.</p>
+                <p><span class="semi-bold">лекция</span>, ауд. 407</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">15:50-17:25</td>
+              <td class="lesson">
+                <h3>Уголовный процесс</h3>
+                <p>доц. Малина М.А.</p>
+                <p><span class="semi-bold">семинар</span>, ауд. 221</p>
+              </td>
+            </tr> -->
+          </tbody>
+        </table>
+      </div>
+      <div class="day">
+        <h2>Вторник</h2>
+        <table class="day-table">
+          <tbody>
+            <tr>
+              <td class="lesson-time">9:50-11:25</td>
+              <td class="lesson">
+                <h3>Международное право</h3>
+                <p>проф. Волова Л.И.</p>
+                <p><span class="semi-bold">лекция</span>, ауд. 407</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">11:55-13:30</td>
+              <td class="lesson">
+                <h3>Международное право</h3>
+                <p>проф. Волова Л.И.</p>
+                <p><span class="semi-bold">семинар</span>, ауд. 315</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">13:45-15:20</td>
+              <td class="lesson">
+                <h3>Гражданское право (ч.2)</h3>
+                <p>доц. Храпунова Е.А.</p>
+                <p><span class="semi-bold">семинар</span>, ауд. 218</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">15:50-17:25</td>
+              <td class="lesson">
+                <h3>Уголовное право</h3>
+                <p>доц. Шимбарева Н.Г.</p>
+                <p><span class="semi-bold">лекция</span>, ауд. 407</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">17:35-19:10</td>
+              <td class="lesson">
+                <h3>Гражданский процесс</h3>
+                <p>доц. Смагина Е.С.</p>
+                <p><span class="semi-bold">лекция</span>, ауд. 407</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="day">
+        <h2>Среда</h2>
+        <table class="day-table">
+          <tbody>
+            <tr>
+              <td class="lesson-time">9:50-11:25</td>
+              <td class="lesson">
+                <h3>Гражданское право (ч.2)</h3>
+                <p>доц. Храпунова Е.А.</p>
+                <p><span class="semi-bold">лекция</span>, ауд. 407</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">11:55-13:30</td>
+              <td class="lesson">
+                <h3>Уголовное право</h3>
+                <p>ст. преп. Саядова А.С.</p>
+                <p><span class="semi-bold">семинар</span>, ауд. 110</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">13:45-15:20</td>
+              <td class="lesson">
+                <h3>Гражданский процесс</h3>
+                <p>доц. Смагина Е.С.</p>
+                <p><span class="semi-bold">семинар</span>, ауд. 218</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="lesson-time">15:50-17:25</td>
+              <td class="lesson">
+                <h3>Административное право</h3>
+                <p>доц. Дригола Э.В.</p>
+                <p><span class="semi-bold">семинар</span>, ауд. 218</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="day">
+        <h2>Четверг</h2>
+        <table class="day-table">
+          <tbody>
+            <tr>
+              <td class="lesson-time">9:50-11:25</td>
+              <td class="lesson">
+                <h3>Иностранный язык в сфере юриспруденции</h3>
+                <p>доц. Денисова А.В.</p>
+                <p class="semi-bold">семинар, Microsoft Teams</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="day">
+        <h2>Суббота</h2>
+        <table class="day-table">
+          <tbody>
+            <tr>
+              <td class="lesson-time">с 8:00</td>
+              <td class="lesson">
+                <h3>МУАМ: Сайтостроение</h3>
+                <p class="semi-bold">Microsoft Teams</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    
   </div>
 </body>
 </html>
