--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Artem Darbinyan">
   <link rel="icon" type="svg" href="assets/img/favicon.svg">
-  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/app.css">
   <title>Расписание</title>
 </head>
@@ -24,7 +24,7 @@
                 <p><span class="semi-bold">лекция</span>, ауд. 407</p>
               </td>
             </tr>
-            <!-- <tr>
+            <tr>
               <td class="lesson-time">13:45-15:20</td>
               <td class="lesson">
                 <h3>Уголовный процесс</h3>
@@ -39,7 +39,7 @@
                 <p>доц. Малина М.А.</p>
                 <p><span class="semi-bold">семинар</span>, ауд. 221</p>
               </td>
-            </tr> -->
+            </tr>
           </tbody>
         </table>
       </div>
@@ -151,8 +151,10 @@
             <tr>
               <td class="lesson-time">с 8:00</td>
               <td class="lesson">
-                <h3>МУАМ: Сайтостроение</h3>
-                <p class="semi-bold">Microsoft Teams</p>
+                <h3 class="texr-center">МУАМ</h3>
+                <p class="semi-bold">Визуальная айдентика и дизайн рекламы</p>
+                <p class="semi-bold">Сайтостроение</p>
+                <p class="semi-bold">Управление IT-проектами</p>
               </td>
             </tr>
           </tbody>
