--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Artem Darbinyan">
   <link rel="icon" type="svg" href="assets/img/favicon.svg">
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/app.css">
   <title>Расписание</title>
 </head>
