--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Artem Darbinyan">
+  <meta name="description" content="Расписание 1 группы, 3 курса юридического факультета ЮФУ.">
   <link rel="icon" type="svg" href="assets/img/favicon.svg">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/app.css">
